--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <loading-block></loading-block>
 
 <p-toast [baseZIndex]="2000"></p-toast>
+<p-confirmDialog [baseZIndex]="2000" [style]="{width: '50vw'}"></p-confirmDialog>
