--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,7 +1,7 @@
 <div #map id="map"></div>
 <panel-treinador></panel-treinador>
 <div *ngIf="!mapaService.inCenter" class="centered">
-    <a class=" item-menu" (click)="mapaService.goCenter()"><i class="pi pi-plus-circle"></i></a>
+    <a class="centralizar" (click)="mapaService.goCenter()"><i class="pi pi-plus-circle"></i></a>
 </div>
 <div class="footer-menu">
     <div class="ui-g">
