--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -26,3 +26,4 @@
 <shop-component></shop-component>
 <battle-component></battle-component>
 <change-power></change-power>
+<evolve-panel></evolve-panel>
