--- a/src/app/components/bag/bag.component.html
+++ b/src/app/components/bag/bag.component.html
@@ -1,16 +1,16 @@
 <p-sidebar [showCloseIcon]="false"  [style]="{paddingTop: '30px'}" [(visible)]="bag" [fullScreen]="true" class="pokedex">
     <p-tabView>
-        <p-tabPanel header="TM">
-            <div class="ui-g">
-                <div *ngFor="let item of getTms()" class="ui-g-4 choose center">
-                    <a>
-                        <img class="item-bag" src="/assets/items/tm.png" />
-                    </a>
-                    <p>{{item.item.name}}</p>
-                    <p>x {{item.amount}}</p>
-                </div>
-            </div>
-        </p-tabPanel>
+        <!--<p-tabPanel header="TM">-->
+            <!--<div class="ui-g">-->
+                <!--<div *ngFor="let item of getTms()" class="ui-g-4 choose center">-->
+                    <!--<a>-->
+                        <!--<img class="item-bag" src="/assets/items/tm.png" />-->
+                    <!--</a>-->
+                    <!--<p>{{item.item.name}}</p>-->
+                    <!--<p>x {{item.amount}}</p>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</p-tabPanel>-->
         <p-tabPanel header="Pokeballs">
             <div class="ui-g">
                 <div *ngFor="let item of getPokeballs()" class="ui-g-4 choose center">
@@ -33,8 +33,32 @@
                 </div>
             </div>
         </p-tabPanel>
+        <p-tabPanel header="Special">
+            <div class="ui-g">
+                <div *ngFor="let item of getSpecials()" class="ui-g-4 choose center">
+                    <a (click)="useSpecial(item)">
+                        <img class="item-bag" src="/assets/items/{{item.item.nemotecnico}}.png" />
+                    </a>
+                    <p>{{item.item.name}}</p>
+                    <p>x {{item.amount}}</p>
+                </div>
+            </div>
+        </p-tabPanel>
     </p-tabView>
     <div class="center">
         <button (click)="bag = false" pButton class="ui-button-warning ui-button-rounded" label="Sair"></button>
     </div>
 </p-sidebar>
+
+<p-dialog [style]="{width: '80%'}" [header]="'Pokemons para Evolução'" [closeIcon]="false" [(visible)]="stoneEvolutionPanel">
+    <div class="center">
+        <div class="ui-g">
+            <div *ngFor="let p of pokemonsToEvolution" class="ui-g-4 center">
+                <a (click)="evoluir(p)"><img class="pokemon" src="/assets/pokemons/{{p.pokemon?.pokemon?.num}}.png" /></a>
+                <p class="captalize">{{p.pokemon?.pokemon?.name}}</p>
+                <p class="captalize">Level: {{p.pokemon?.level}}</p>
+            </div>
+        </div>
+        <button (click)="stoneEvolutionPanel = false" pButton class="ui-button-warning ui-button-rounded" label="Sair"></button>
+    </div>
+</p-dialog>
