--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -5,7 +5,10 @@
 </div>
 <div class="footer-menu">
     <div class="ui-g">
-        <div class="ui-g-4"></div>
+        <div class="ui-g-2"></div>
+        <div class="ui-g-2">
+            <a (click)="pokemon.giftPokemon()"><img class="item-menu" src="/assets/icon/gift.png"></a>
+        </div>
         <div class="ui-g-2">
             <a (click)="shop.open()"><img class="item-menu" src="/assets/icon/shop.png"></a>
         </div>
