--- a/src/app/components/panel-treinador/panel-treinador.component.css
+++ b/src/app/components/panel-treinador/panel-treinador.component.css
@@ -28,3 +28,10 @@
     padding: 5px 0 0 0 !important;
     margin: 0 !important;
 }
+.badge {
+    width: 30px;
+    height: 30px;
+}
+.ui-g-3 {
+    padding: 0;
+}
