--- a/src/app/components/pokeball/pokeball.component.html
+++ b/src/app/components/pokeball/pokeball.component.html
@@ -4,8 +4,7 @@
             <div *ngIf="treinador.team.length > 0" class="ui-g">
                 <div *ngFor="let pokemon of treinador.team" class="ui-g-4 center">
                     <a (click)="openDetail(pokemon)">
-                        <img *ngIf="pokemon?.pokemon?.num != '006'" class="pokemon-pokedex" src="/assets/pokemons/{{pokemon?.pokemon?.num}}.png" />
-                        <img *ngIf="pokemon?.pokemon?.num == '006'" class="pokemon-pokedex" src="/assets/pokemons/{{pokemon?.pokemon?.num}}.gif" />
+                        <img class="pokemon-pokedex" src="/assets/pokemons/{{pokemon?.pokemon?.num}}.png" />
                     </a>
                     <p class="captalize">{{pokemon?.pokemon?.name}}</p>
                     <p>Level: {{pokemon?.level}}</p>
@@ -18,8 +17,7 @@
             <div *ngIf="treinador.pokemons.length > 0" class="ui-g rolar">
                 <div *ngFor="let pokemon of treinador.pokemons" class="ui-g-4 center">
                     <a (click)="openDetail(pokemon)">
-                        <img *ngIf="pokemon?.pokemon?.num != '006'" class="pokemon-pokedex" src="/assets/pokemons/{{pokemon?.pokemon?.num}}.png" />
-                        <img *ngIf="pokemon?.pokemon?.num == '006'" class="pokemon-pokedex" src="/assets/pokemons/{{pokemon?.pokemon?.num}}.gif" />
+                        <img class="pokemon-pokedex" src="/assets/pokemons/{{pokemon?.pokemon?.num}}.png" />
                     </a>
                     <p class="captalize">{{pokemon?.pokemon?.name}}</p>
                     <p>Level: {{pokemon?.level}}</p>
@@ -38,8 +36,7 @@
         <div class="ui-g center">
             <div class="ui-g-5">
                 <p class="uppercase bold">{{pokemonDetail?.pokemon?.name}}</p>
-                <img *ngIf="pokemonDetail?.pokemon?.num != '006'" src="/assets/pokemons/{{pokemonDetail?.pokemon?.num}}.png" />
-                <img *ngIf="pokemonDetail?.pokemon?.num == '006'" src="/assets/pokemons/{{pokemonDetail?.pokemon?.num}}.gif" />
+                <img src="/assets/pokemons/{{pokemonDetail?.pokemon?.num}}.png" />
             </div>
             <div class="ui-g-7">
                 <p class="bold">Level: {{pokemonDetail?.level}}</p>
@@ -48,6 +45,7 @@
                 <p class="bold">Defense: {{pokemonDetail?.defense}}</p>
                 <p class="bold">Speed: {{pokemonDetail?.speed}}</p>
                 <p class="bold">HP: {{pokemonDetail?.hp}}</p>
+                <p class="bold" *ngIf="pokemonDetail.pokemon">Tipo: <span class="captalize" *ngFor="let tipo of pokemonDetail.pokemon.types"> {{tipo?.type?.name}} </span></p>
             </div>
         </div>
         <div class="center">
@@ -57,32 +55,32 @@
             <div class="ui-g-6">
                 <a pButton class="ui-button-danger ui-button-rounded btnPower">
                     <p class="uppercase">{{pokemonDetail?.move1?.name}}</p>
-                    <small>Power: {{pokemonDetail?.move1?.power}}</small><br>
-                    <small>Accuracy: {{pokemonDetail?.move1?.accuracy}}</small><br>
+                    <small>Power: {{pokemonDetail?.move1?.power || 0}}</small><br>
+                    <small>Accuracy: {{pokemonDetail?.move1?.accuracy || 0}}</small><br>
                     <small>Type: {{pokemonDetail?.move1?.type?.name}}</small>
                 </a>
             </div>
             <div *ngIf="pokemonDetail.move2" class="ui-g-6">
                 <a pButton class="ui-button-danger ui-button-rounded btnPower">
                     <p class="uppercase">{{pokemonDetail?.move2?.name}}</p>
-                    <small>Power: {{pokemonDetail?.move2?.power}}</small><br>
-                    <small>Accuracy: {{pokemonDetail?.move2?.accuracy}}</small><br>
+                    <small>Power: {{pokemonDetail?.move2?.power || 0}}</small><br>
+                    <small>Accuracy: {{pokemonDetail?.move2?.accuracy || 0}}</small><br>
                     <small>Type: {{pokemonDetail?.move2?.type?.name}}</small>
                 </a>
             </div>
             <div *ngIf="pokemonDetail.move3"  class="ui-g-6">
                 <a pButton class="ui-button-danger ui-button-rounded btnPower">
                     <p class="uppercase">{{pokemonDetail?.move3?.name}}</p>
-                    <small>Power: {{pokemonDetail?.move3?.power}}</small><br>
-                    <small>Accuracy: {{pokemonDetail?.move3?.accuracy}}</small><br>
+                    <small>Power: {{pokemonDetail?.move3?.power || 0}}</small><br>
+                    <small>Accuracy: {{pokemonDetail?.move3?.accuracy || 0}}</small><br>
                     <small>Type: {{pokemonDetail?.move3?.type?.name}}</small>
                 </a>
             </div>
             <div *ngIf="pokemonDetail.move4"  class="ui-g-6">
                 <a pButton class="ui-button-danger ui-button-rounded btnPower">
                     <p class="uppercase">{{pokemonDetail?.move4?.name}}</p>
-                    <small>Power: {{pokemonDetail?.move4?.power}}</small><br>
-                    <small>Accuracy: {{pokemonDetail?.move4?.accuracy}}</small><br>
+                    <small>Power: {{pokemonDetail?.move4?.power || 0}}</small><br>
+                    <small>Accuracy: {{pokemonDetail?.move4?.accuracy || 0}}</small><br>
                     <small>Type: {{pokemonDetail?.move4?.type?.name}}</small>
                 </a>
             </div>
