--- a/src/app/components/battle/battle.component.html
+++ b/src/app/components/battle/battle.component.html
@@ -5,7 +5,14 @@
                 <div class="life-panel box-shadow">
                     <div class="ui-g center">
                         <div class="ui-g-7">
-                            <span class="captalize text-black bold f12">{{oponent?.pokemon?.pokemon?.name || ''}}</span>
+                            <span class="captalize text-black bold f12">
+                                {{oponent?.pokemon?.pokemon?.name || ''}}
+                                <img class="img-12" *ngIf="oponent && oponent.pokemon && oponent.pokemon.burned" src="/assets/icon/effects/fire.png" />
+                                <img class="img-12" *ngIf="oponent && oponent.pokemon && oponent.pokemon.paralized" src="/assets/icon/effects/electric.png" />
+                                <img class="img-12" *ngIf="oponent && oponent.pokemon && oponent.pokemon.freezed" src="/assets/icon/effects/ice.png" />
+                                <img class="img-12" *ngIf="oponent && oponent.pokemon && oponent.pokemon.poisoned" src="/assets/icon/effects/poison.png" />
+                                <img class="img-12" *ngIf="oponent && oponent.pokemon && oponent.pokemon.sleeping" src="/assets/icon/effects/sleep.png" />
+                            </span>
                         </div>
                         <div class="ui-g-5">
                             <span class="captalize text-black bold f12">Lv: {{oponent?.pokemon?.level || ''}}</span>
@@ -30,6 +37,11 @@
                         <div class="ui-g-7">
                             <span class="captalize text-black bold f12">
                                 {{challenger?.pokemon?.pokemon?.name || ''}}
+                                <img class="img-12" *ngIf="challenger && challenger.pokemon && challenger.pokemon.burned" src="/assets/icon/effects/fire.png" />
+                                <img class="img-12" *ngIf="challenger && challenger.pokemon && challenger.pokemon.paralized" src="/assets/icon/effects/electric.png" />
+                                <img class="img-12" *ngIf="challenger && challenger.pokemon && challenger.pokemon.freezed" src="/assets/icon/effects/ice.png" />
+                                <img class="img-12" *ngIf="challenger && challenger.pokemon && challenger.pokemon.poisoned" src="/assets/icon/effects/poison.png" />
+                                <img class="img-12" *ngIf="challenger && challenger.pokemon && challenger.pokemon.sleeping" src="/assets/icon/effects/sleep.png" />
                             </span>
                         </div>
                         <div class="ui-g-5">
