--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -69,6 +69,12 @@ p-sidebar.battle-panel div.ui-sidebar-full {
 .w-80 {
     width: 80%;
 }
+.w-90 {
+    width: 90%;
+}
+.w-100 {
+    width: 100%;
+}
 .m-auto {
     margin: auto;
 }
